--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -7,34 +7,39 @@
 	}
 
 	&__text-content{
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	left: 0;
-	width: 100%;
-	text-align: center;
+		padding-top: 88px;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 0;
+		width: 100%;
+		text-align: center;
+
+		@mixin atMedium{
+			padding-top: 60px;
+		}
 	}
 
 	&__title{
-	font-weight: 300;
-	color: $mainBlue;
-	font-size: 2rem;
-	margin: 0;
+		font-weight: 300;
+		color: $mainBlue;
+		font-size: 2rem;
+		margin: 0;
 
-		@mixin atSmall{
-			font-size: 4.8rem;
-		}
+			@mixin atSmall{
+				font-size: 4.8rem;
+			}
 	}
 
 	&__subtitle{
-	font-weight: 300;
-	color: $mainBlue;
-	font-size: 1.5rem;
-	margin: 0;
+		font-weight: 300;
+		color: $mainBlue;
+		font-size: 1.5rem;
+		margin: 0;
 
-		@mixin atSmall{
-			font-size: 2.9rem;
-		}
+			@mixin atSmall{
+				font-size: 2.9rem;
+			}
 	}
 
 	&__description{
